# nao_meshes_generator

./: CMakeLists.txt  README  README~
debian/: README
python/nao_meshes/: parse_mesh.py
